[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/GameUI/Inside-ship.png" type="Texture" id=1]
[ext_resource path="res://Font/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/GameUI/Nav-arrow.png" type="Texture" id=3]
[ext_resource path="res://Scenes/levelBtn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/FactorSelect.gd" type="Script" id=5]
[ext_resource path="res://Scenes/BackBtn.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=2]
size = 100
outline_color = Color( 1, 0.988235, 0.741176, 1 )
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]

[node name="Inside-ship" type="Sprite" parent="."]
position = Vector2( -38.662, -6.65181 )
scale = Vector2( 0.711953, 0.701806 )
texture = ExtResource( 1 )
offset = Vector2( 961, 541 )

[node name="FactorSelect" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 949.0
margin_top = 515.0
margin_right = 989.0
margin_bottom = 555.0
script = ExtResource( 5 )

[node name="Page1" type="GridContainer" parent="FactorSelect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -895.8
margin_top = -418.6
margin_right = 264.2
margin_bottom = 43.4
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 559, 213 )
custom_constants/vseparation = 50
custom_constants/hseparation = 25
columns = 5

[node name="0" parent="FactorSelect/Page1" instance=ExtResource( 4 )]
rect_scale = Vector2( 1, 1 )

[node name="1" parent="FactorSelect/Page1" instance=ExtResource( 4 )]
margin_left = 237.0
margin_right = 449.0
rect_scale = Vector2( 1, 1 )

[node name="2" parent="FactorSelect/Page1" instance=ExtResource( 4 )]
margin_left = 474.0
margin_right = 686.0
rect_scale = Vector2( 1, 1 )

[node name="3" parent="FactorSelect/Page1" instance=ExtResource( 4 )]
margin_left = 711.0
margin_right = 923.0
rect_scale = Vector2( 1, 1 )

[node name="4" parent="FactorSelect/Page1" instance=ExtResource( 4 )]
margin_left = 948.0
margin_right = 1160.0
rect_scale = Vector2( 1, 1 )

[node name="5" parent="FactorSelect/Page1" instance=ExtResource( 4 )]
margin_top = 256.0
margin_bottom = 462.0
rect_scale = Vector2( 1, 1 )

[node name="6" parent="FactorSelect/Page1" instance=ExtResource( 4 )]
margin_left = 237.0
margin_top = 256.0
margin_right = 449.0
margin_bottom = 462.0
rect_scale = Vector2( 1, 1 )

[node name="7" parent="FactorSelect/Page1" instance=ExtResource( 4 )]
margin_left = 474.0
margin_top = 256.0
margin_right = 686.0
margin_bottom = 462.0
rect_scale = Vector2( 1, 1 )

[node name="8" parent="FactorSelect/Page1" instance=ExtResource( 4 )]
margin_left = 711.0
margin_top = 256.0
margin_right = 923.0
margin_bottom = 462.0
rect_scale = Vector2( 1, 1 )

[node name="9" parent="FactorSelect/Page1" instance=ExtResource( 4 )]
margin_left = 948.0
margin_top = 256.0
margin_right = 1160.0
margin_bottom = 462.0
rect_scale = Vector2( 1, 1 )

[node name="Page2" type="GridContainer" parent="FactorSelect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -895.8
margin_top = -418.6
margin_right = 314.2
margin_bottom = 43.4
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 559, 213 )
custom_constants/vseparation = 50
custom_constants/hseparation = 25
columns = 5

[node name="10" parent="FactorSelect/Page2" instance=ExtResource( 4 )]
rect_scale = Vector2( 1, 1 )

[node name="11" parent="FactorSelect/Page2" instance=ExtResource( 4 )]
margin_left = 237.0
margin_right = 449.0
rect_scale = Vector2( 1, 1 )

[node name="12" parent="FactorSelect/Page2" instance=ExtResource( 4 )]
margin_left = 474.0
margin_right = 686.0
rect_scale = Vector2( 1, 1 )

[node name="13" parent="FactorSelect/Page2" instance=ExtResource( 4 )]
margin_left = 711.0
margin_right = 923.0
rect_scale = Vector2( 1, 1 )

[node name="14" parent="FactorSelect/Page2" instance=ExtResource( 4 )]
margin_left = 948.0
margin_right = 1160.0
rect_scale = Vector2( 1, 1 )

[node name="15" parent="FactorSelect/Page2" instance=ExtResource( 4 )]
margin_top = 256.0
margin_bottom = 462.0
rect_scale = Vector2( 1, 1 )

[node name="16" parent="FactorSelect/Page2" instance=ExtResource( 4 )]
margin_left = 237.0
margin_top = 256.0
margin_right = 449.0
margin_bottom = 462.0
rect_scale = Vector2( 1, 1 )

[node name="17" parent="FactorSelect/Page2" instance=ExtResource( 4 )]
margin_left = 474.0
margin_top = 256.0
margin_right = 686.0
margin_bottom = 462.0
rect_scale = Vector2( 1, 1 )

[node name="18" parent="FactorSelect/Page2" instance=ExtResource( 4 )]
margin_left = 711.0
margin_top = 256.0
margin_right = 923.0
margin_bottom = 462.0
rect_scale = Vector2( 1, 1 )

[node name="19" parent="FactorSelect/Page2" instance=ExtResource( 4 )]
margin_left = 948.0
margin_top = 256.0
margin_right = 1160.0
margin_bottom = 462.0
rect_scale = Vector2( 1, 1 )

[node name="Page3" type="GridContainer" parent="FactorSelect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -895.8
margin_top = -418.6
margin_right = 314.2
margin_bottom = 43.4
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 559, 213 )
custom_constants/vseparation = 50
custom_constants/hseparation = 25
columns = 5

[node name="20" parent="FactorSelect/Page3" instance=ExtResource( 4 )]
rect_scale = Vector2( 1, 1 )

[node name="21" parent="FactorSelect/Page3" instance=ExtResource( 4 )]
margin_left = 237.0
margin_right = 449.0
rect_scale = Vector2( 1, 1 )

[node name="levelTXT" type="Label" parent="FactorSelect"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -428.0
margin_top = -340.0
margin_right = 413.0
margin_bottom = -213.0
rect_pivot_offset = Vector2( 390, 49 )
custom_colors/font_color = Color( 1, 0.94902, 0.647059, 1 )
custom_fonts/font = SubResource( 2 )
text = "Your Level"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="LeftBtn" type="TextureButton" parent="FactorSelect"]
margin_left = -845.0
margin_top = -20.0
margin_right = 155.0
margin_bottom = 980.0
rect_scale = Vector2( 0.134832, 0.134832 )
texture_normal = ExtResource( 3 )
expand = true

[node name="RghtBtn" type="TextureButton" parent="FactorSelect"]
margin_left = 122.0
margin_top = -15.0
margin_right = 1122.0
margin_bottom = 985.0
rect_scale = Vector2( 0.134832, 0.134832 )
texture_normal = ExtResource( 3 )
expand = true
flip_h = true

[node name="BackBtn" parent="." instance=ExtResource( 6 )]
__meta__ = {
"_editor_description_": ""
}

[connection signal="visibility_changed" from="." to="FactorSelect" method="_on_Node2D_visibility_changed"]
[connection signal="pressed" from="FactorSelect/LeftBtn" to="FactorSelect" method="_on_LeftBtn_pressed"]
[connection signal="pressed" from="FactorSelect/RghtBtn" to="FactorSelect" method="_on_RghtBtn_pressed"]
